--- a/themes/thoreauscss/assets/scss/_home.scss
+++ b/themes/thoreauscss/assets/scss/_home.scss
@@ -23,6 +23,7 @@
     }
     a {
       color: $blueLight;
+      border-bottom: 1px solid $blueLight;
     }
   }
 }
